fix(css-elevation): avoid not showing box-shadow with high-elevation variable

--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -51,4 +51,5 @@
   --aura-shadow: 0px 0px 0px 3px var(--primary-100);
   --error-aura-shadow: 0px 0px 0px 3px var(--error-100);
   --soft-elevation: 0px 2px 10px 0px var(--neutral-100);
+  --high-elevation: 0px 4px 12px 2px var(--neutral-100);
 }
